2007-05-14  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-extractor.c:
	The profile fragment does need to have an element first otherwise
	it may not be a valid pipeline if it starts with caps. Add fakesrc.

2007-05-14  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-metadata-cdtext.h:
	* libjuicer/sj-metadata-musicbrainz.h:
	Fix typo in the _TYPE define which broke startup. Thanks Emmanuele
	for noticing the problem.
	
2007-05-14  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-metadata-cdtext.c:
	* libjuicer/sj-metadata-musicbrainz.c:
	Use G_DEFINE_TYPE_WITH_CODE.

2007-05-13  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-metadata-cdtext.c:
	Update to changes in SjMetadata object.

2007-05-13  Ross Burton  <ross@burtonini.com>

	* configure.ac:
	* NEWS:
	Version 2.19.0.

2007-05-13  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-metadata-musicbrainz.c:
	Attempt to repair brain-dead FreeDB encoding (#169591, thanks
	Ka-Hing Cheung).

2007-04-30  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-extractor.c:
	Refactor to be more GObject-like.

2007-04-30  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-metadata.[ch]:
	* libjuicer/sj-metadata-musicbrainz.c:
	Refactor to be more GObject-like.

2007-04-26  Christian Persch  <chpe@gnome.org>

	* libjuicer/sj-metadata-musicbrainz.c:
	(sj_metadata_musicbrainz_finalize): Chain up to parent's finalise
	handler. Bug #433137.

2007-04-11  Bastien Nocera  <hadess@hadess.net>

	* src/sj-play.c: (setup): Follow the preferred sound device as
	set in the control-center (Closes: #428677)

2007-03-26  Bastien Nocera  <hadess@hadess.net>

	reviewed by: Ross Burton <ross@burtonini.com>

	* libjuicer/sj-util.c: (xdg_user_dir_lookup),
	(sj_get_default_music_directory), (sj_add_default_dirs):
	* libjuicer/sj-util.h:
	* src/sj-main.c: (baseuri_changed_cb), (main):
	* src/sj-prefs.c: (baseuri_changed_cb), (on_edit_preferences_cb):
	* src/sound-juicer.h: Use xdg-user-dirs to set a nice default target